--- a/action.yml
+++ b/action.yml
@@ -25,17 +25,17 @@ runs:
 
     - name: Create and push tag in target repository
       env:
-        TARGET_REPO_OWNER: "nuralogix"
-        TARGET_REPO_NAME: "dfx-autodemo-py"
+        TARGET_REPO_OWNER: "RGCsAGupta"
+        TARGET_REPO_NAME: "gh-actions-trigger-test-2"
       run: |
         TAG_NAME="${{ inputs.app-name }}-${{ inputs.app-version }}-${{ steps.get_sha.outputs.sha }}"
 
         echo "Creating tag $TAG_NAME in target repository"
 
-        git config --global user.email "${{ secrets.GH_AUTOMATION_USERNAME }}@nuralogix.ai"
-        git config --global user.name "${{ secrets.GH_AUTOMATION_USERNAME }}"
+        git config --global user.email "automation-bot@rgcs.ca"
+        git config --global user.name "${{ inputs.git-user }}"
 
-        git clone "https://${{ secrets.GH_AUTOMATION_USERNAME }}:${{ secrets.GH_PAT }}@github.com/${TARGET_REPO_OWNER}/${TARGET_REPO_NAME}.git"
+        git clone "https://${{ inputs.git-user }}:${{ inputs.git-pat }}@github.com/${TARGET_REPO_OWNER}/${TARGET_REPO_NAME}.git"
         cd ${{ env.TARGET_REPO_NAME }}
         git tag $TAG_NAME
         git push --tags
